# Sensible--Bleeding-Edge-AR-VR-Tracking-Simple-SLAM-

./: .gitignore  CMakeLists.txt  PhysicalHomography.h  README.md  RobustVisualInertialOdometry.h  START.bat  Win-GenProjects.bat  XRWrapper.py  camera.h  config.h  main.cpp  setup.bat
BST_SLAM-Source/Core/: BST_SLAM.cpp
BST_SLAM-Source/Core/BST_SLAM/: Messaging.hpp  Solver.hpp
BST_SLAM-Source/User/: SensorDriver.hpp
HDK2 CROWBAR INDEV-2025.2.1/: SBS.cs  SBS.mat  SBS.shader  VRCam.cs
HDK2 CROWBAR INDEV-2025.2.1/BST_XR/: CMakeLists.txt  README.md  Win-GenProjects.bat
HDK2 CROWBAR INDEV-2025.2.1/BST_XR/BST_XR-Projects/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BST_XR.sln  BST_XR.vcxproj  BST_XR.vcxproj.filters.tmp15a59  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
HDK2 CROWBAR INDEV-2025.2.1/BST_XR/BST_XR-Projects/.cache/depthai/crashdumps/ad91fbd54d354bd2f27398f2042c0c5043d02de3/: crash_dump.json
HDK2 CROWBAR INDEV-2025.2.1/BST_XR/BST_XR-Projects/BST_XR.dir/Debug/: BST_XR.exe.recipe
HDK2 CROWBAR INDEV-2025.2.1/BST_XR/BST_XR-Projects/BST_XR.dir/Debug/BST_XR.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
HDK2 CROWBAR INDEV-2025.2.1/BST_XR/BST_XR-Projects/BST_XR.dir/Release/: BST_XR.exe.recipe
HDK2 CROWBAR INDEV-2025.2.1/BST_XR/BST_XR-Projects/BST_XR.dir/Release/BST_XR.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
HDK2 CROWBAR INDEV-2025.2.1/BST_XR/BST_XR-Projects/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
HDK2 CROWBAR INDEV-2025.2.1/BST_XR/BST_XR-Projects/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
HDK2 CROWBAR INDEV-2025.2.1/BST_XR/BST_XR-Projects/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
HDK2 CROWBAR INDEV-2025.2.1/BST_XR/BST_XR-Projects/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  ZERO_CHECK.lastbuildstate
HDK2 CROWBAR INDEV-2025.2.1/BST_XR/BST_XR-Source/: BST_CAM.hpp  BST_PNP.hpp  BST_XR.cpp
Pocket Full of Sunshine/: camera.h  miniGE.h
Pocket Full of Sunshine/cv++/: cv++.h
